resolvido bug de clique no botao submit através de z-index

--- a/src/pages/Register/RegisterUser.css
+++ b/src/pages/Register/RegisterUser.css
@@ -20,6 +20,8 @@
 
 .position-custom{
     margin-top: 90px !important;
+    position: relative;
+    z-index: 1;
 }
 
 .model-position {
